Cleanup translation files

--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -6,6 +6,10 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Original English texts for existing translations are
+# indicated with a proceeding #orig#.
+# Please check if the meaning is still the same.
+#
 # Pro version translations start with the prefix 'pro.'
 #
 # There is also a guide on our offical webpage under
@@ -391,12 +395,6 @@ chat_panel.member_disconnected_at_time={0} \u063a\u064a\u0631 \u0645\u062a\u0635
 
 ##connection_quality_poor.text=Poor connection quality
 
-##date_format.detailed_time=[HH\:mm\:ss\:SSS]
-##date_format.file_date=MM/dd/yyyy HH\:mm
-##date_format.file_date_hours=HH\:mm
-##date_format.full_date=MM/dd/yyyy HH\:mm\:ss
-##date_format.time_only_date=[HH\:mm\:ss]
-
 ##debug_information_card.title=Debug
 
 ##delete.busy.description=Moving file from your folder to recycle bin
@@ -411,9 +409,9 @@ dialog.already_running.title=\u062c\u0627\u0631\u064d \u062d\u0627\u0644\u064a\u
 #orig#dialog.already_running.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder \u062c\u0627\u0631\u064d \u062d\u0627\u0644\u064a\u0627\u064b \n\n\u062a\u0644\u0645\u064a\u062d\: \u0625\u0630\u0627 \u0642\u0645\u062a \u0628\u0625\u0639\u0627\u062f\u0629 \u062a\u0634\u063a\u064a\u0644 PowerFolder, \n\u0627\u063a\u0644\u0642 \u0643\u0644 \u062a\u0637\u0628\u064a\u0642\u0627\u062a \u0627\u0644\u062c\u0627\u0641\u0627w/\u0627\u063a\u0644\u0642 \u0643\u0644 \u062a\u0637\u0628\u064a\u0642\u0627\u062a \u0627\u0644\u062c\u0627\u0641\u0627 \u0648\u062d\u0627\u0648\u0644 \u0645\u0646 \u062c\u062f\u064a\u062f
 ##dialog.ask_for_friendship.button.add=Add to friends
-##dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.ask_for_friendship.explain=PowerFolder automatically connects\nto computers on your friendslist.
 ##dialog.ask_for_friendship.message_title=Message from {0}
-##dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.ask_for_friendship.question={0} joined these PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.title=Add {0} to friend list
 ##dialog.ask_for_quit_on_x.Exit_button=Exit
@@ -508,7 +506,7 @@ dialog.unable_to_open_port=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0
 ##dialog.update.updating.text=Downloading update
 ##dialog.update_check.downloadAndUpdate=Download and update now
 ##dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-##dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+##dialog.update_check.failed.text=Update failed. Please check your Internet connection.
 ##dialog.update_check.failed.title=Update failed
 ##dialog.update_check.gotoHomepage=Go to PowerFolder homepage
 ##dialog.update_check.noUpdateAvailable=This version is up to date
@@ -521,6 +519,7 @@ dialog.unable_to_open_port=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0
 
 ##downloads_information_card.auto_cleanup.days={0} day(s)
 ##downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
+##downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##downloads_information_card.auto_cleanup.immediate=Immediate
 ##downloads_information_card.auto_cleanup.name=Auto-cleanup
 ##downloads_information_card.title=Downloads
@@ -542,7 +541,7 @@ dialog.unable_to_open_port=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0
 ##exp_folder_view.estimated_synchronized=Estimated synchronized\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
-##exp_folder_view.files_available={0} file(s) available
+##exp_folder_view.files_available={0} available
 ##exp_folder_view.files_available_tip=Display the available files
 ##exp_folder_view.folder_local_online_text=Local folder, backed up online
 ##exp_folder_view.folder_local_text=Local folder
@@ -552,6 +551,7 @@ dialog.unable_to_open_port=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0
 ##exp_folder_view.local={0} local
 ##exp_folder_view.members=Members\: {0} ({1} connected)
 ##exp_folder_view.never_synchronized=Never synchronized
+##exp_folder_view.new_files_tip_text={0} new file(s)
 ##exp_folder_view.not_yet_scanned=Not yet scanned
 ##exp_folder_view.synchronized={0}% synchronized
 ##exp_folder_view.total={0} total
@@ -590,7 +590,10 @@ file_info.name=\u0627\u0644\u0627\u0633\u0645
 #orig#file_info.remote_deleted=Newer version deleted by other computer
 file_info.remote_deleted=\u062a\u0645 \u0645\u062d\u0648 \u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b \u0645\u0646 \u0642\u0628\u0644 \u0645\u0633\u062a\u062e\u062f\u0645 \u0623\u062e\u0631
 
+##file_version_tab.current_version=Current version\: {0}
+##file_version_tab.date=Date\: {0}
 ##file_version_tab.no_versions_available=No version history available
+##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
 ##file_versions_table_model.size=Size
@@ -767,8 +770,12 @@ friends_panel.n_a=n/a
 #orig#friends_panel.unable_to_connect=Currently online (Unable to connect)
 friends_panel.unable_to_connect=\u062d\u0627\u0644\u064a\u0627 \u0645\u062a\u0635\u0644  (\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0644\u0649 \u0627\u0644\u0627\u062a\u0635\u0627\u0644 )
 
+##friendship.notification.message=You have received a request for friendship.
+##friendship.notification.title=Friendship Request Received
+
 ##general.accept=Accept
 ##general.application.name=PowerFolder
+##general.apply=Apply
 ##general.archive_mode=File archive (local)
 #orig#general.cancel=Cancel
 general.cancel=\u0625\u0644\u063a\u0627\u0621
@@ -798,7 +805,6 @@ general.folder_name=\u0627\u0644\u0627\u0633\u0645
 general.friday=\u0627\u0644\u062c\u0645\u0639\u0629
 ##general.hours=Hour(s)
 ##general.inviter=Inviter
-##general.lan_only=LAN only
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=\u0646\u0633\u062e \u0645\u062d\u0644\u064a \u0639\u0644\u0649
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -810,6 +816,9 @@ general.localnet=\u0634\u0628\u0643\u0629
 #orig#general.monday=Monday
 general.monday=\u0627\u0644\u0627\u062b\u0646\u064a\u0646
 ##general.more.lower_case=more
+##general.network_mode.lan_only=LAN only
+##general.network_mode.private=LAN and Internet
+##general.network_mode.server_only=Server only
 ##general.neverAskAgain=Never ask this again
 #orig#general.not_available=not available
 general.not_available=\u063a\u064a\u0631 \u0645\u062a\u0627\u062d
@@ -830,7 +839,6 @@ general.saturday=\u0627\u0644\u0633\u0628\u062a
 ##general.search=Search
 ##general.seconds=Second(s)
 ##general.server=Server
-##general.server_only=Server only
 #orig#general.size=Size
 general.size=\u0627\u0644\u062d\u062c\u0645
 #orig#general.sunday=Sunday
@@ -856,10 +864,10 @@ general.yesterday=\u0627\u0644\u0628\u0627\u0631\u062d\u0629
 
 ##home_tab.computers=Computer(s)
 ##home_tab.files_available=File(s) available
-##home_tab.files_downloaded=File(s) downloaded
-##home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
-##home_tab.files_uploaded=File(s) uploaded
-##home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
+##home_tab.files_downloads=Download(s)
+##home_tab.files_downloads_active=Download(s) ({0} KB/s)
+##home_tab.files_uploads=Upload(s)
+##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
 ##home_tab.folders=Folder(s)
 ##home_tab.in_sync=All folders are synchronized
 ##home_tab.last_synced=Last synchronized {0}
@@ -899,6 +907,8 @@ image_file_info.resolution=\u0642\u0631\u0627\u0631
 #orig#image_file_info.unknown=Unknown
 image_file_info.unknown=\u063a\u064a\u0631 \u0645\u0639\u0631\u0648\u0641
 
+##invitation.notification.message=You have received an invitation to a folder.
+##invitation.notification.title=Invitation Received
 ##invitation.utils.unable.write.text=Error while writing invitation, please try again.
 ##invitation.utils.unable.write.title=Unable to write invitation
 
@@ -944,7 +954,7 @@ line_speed.upload_speed=\u0627\u0644\u062d\u062f \u0627\u0644\u0627\u0642\u0635\
 ##low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 ##low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
 ##low_memory.do_nothing=Do Nothing
-##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 ##low_memory.error.title=Out of memory
 ##low_memory.increase=Increase Memory
 ##low_memory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
@@ -1012,9 +1022,6 @@ network_statistics_panel.reconnection_queue_size=\u0627\u0644\u0625\u0631\u062a\
 ##notification_handler.display.text=Display
 ##notification_handler.ignore.text=Ignore
 
-##number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
-##number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
-
 #orig#online_label.connecting=Connecting
 online_label.connecting=\u0645\u062a\u0635\u0644
 #orig#online_label.disabled=Disabled
@@ -1026,9 +1033,10 @@ online_label.online=\u0639\u0644\u0649 \u0627\u0644\u062e\u0637
 ##online_storage.connecting=Connecting to server
 
 ##online_storage_component.online_storage_text=Online storage\: {0}%
+##online_storage_component.online_storage_tip=Open this online storage folder in browser
+##online_storage_component.online_storage_unjoined_text=Online Storage\: 0% (start now)
+##online_storage_component.online_storage_unjoined_tip=Backup this folder to Online Storage
 ##online_storage_component.online_storage_warning=Online storage quota exceeded
-
-##percent.place.holder={0}%
 
 ##permissions.folder.admin=Admin
 ##permissions.folder.default=default
@@ -1075,6 +1083,7 @@ preferences.dialog.bind.tooltip=\u0623\u062e\u062a\u0631 \u0627\u0644\u0639\u064
 preferences.dialog.bindDescr=\u0648\u0635\u0641 \u0627\u0644\u062a\u0648\u0635\u064a\u0644
 #orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.create_desktop_shortcuts=\u0625\u0646\u0634\u0627\u0621 \u0627\u062e\u062a\u0635\u0627\u0631 \u0639\u0644\u0649 \u0633\u0637\u062d \u0627\u0644\u0645\u0643\u062a\u0628
+##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=\u0625\u0633\u062a\u062e\u062f\u0627\u0645 \u0645\u0632\u0627\u0645\u0646\u0629 \u062f\u0644\u062a\u0627
 #orig#preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
@@ -1233,7 +1242,9 @@ preferences.dialog.titleProcessing=\u0642\u064a\u062f \u0627\u0644\u0645\u0639\u
 ##preferences.dialog.use.relayed.connections=Use relayed connections
 ##preferences.dialog.use.udt.connections=Use UDT connections
 ##preferences.dialog.use_delta_on_internet=on Internet
+##preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
 ##preferences.dialog.use_delta_on_lan=on LAN
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
 ##preferences.dialog.use_mass_delete=Use mass delete protection
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 ##preferences.dialog.use_zip_on_internet=on Internet
@@ -1457,12 +1468,14 @@ status.download=%.2f KB/s
 status.upload=%.2f KB/s
 
 ##status_bar.no_sleep.tips=Enable folder change scanning
-##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
+##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 ##status_bar.status_change.connected=PowerFolder is connected
 ##status_bar.status_change.disabled=PowerFolder is disabled
 ##status_bar.status_change.title=Connection Status
+
+##sync_icon_button_mini.tip=Synchronize folder now
 
 #orig#synchronization.notice.title=Activated transfer mode {0}
 synchronization.notice.title=\u062a\u0641\u0639\u064a\u0644 \u0645\u0644\u0641 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 {0}
@@ -1584,6 +1597,7 @@ transfers.verifying=\u064a\u062a\u0645 \u0627\u0644\u0625\u0646\u062c\u0627\u063
 
 ##uploads_information_card.auto_cleanup.days={0} day(s)
 ##uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
+##uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##uploads_information_card.auto_cleanup.immediate=Immediate
 ##uploads_information_card.auto_cleanup.name=Auto-cleanup
 ##uploads_information_card.title=Uploads
@@ -1592,16 +1606,20 @@ transfers.verifying=\u064a\u062a\u0645 \u0627\u0644\u0625\u0646\u062c\u0627\u063
 ##user.dir.custom=Custom
 ##user.dir.desktop=Desktop
 ##user.dir.documents=Documents
+##user.dir.downloads=Downloads
 ##user.dir.evolution=Evolution
 ##user.dir.favorites=Favorites
 ##user.dir.links=Links
+##user.dir.movies=Movies
 ##user.dir.music=Music
 ##user.dir.my_documents=My Documents
 ##user.dir.my_music=My Music
 ##user.dir.my_pictures=My Pictures
 ##user.dir.my_videos=My Videos
 ##user.dir.pictures=Pictures
+##user.dir.public=Public
 ##user.dir.recent_documents=Recent Documents
+##user.dir.sites=Sites
 ##user.dir.videos=Videos
 
 #orig#winutils.shortcut.description=This shortcut was placed here by PowerFolder
@@ -1660,7 +1678,7 @@ wizard.control.next=\u0627\u0644\u062a\u0627\u0644\u064a
 ##wizard.finish.os_login_title=Login Successful
 ##wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 ##wizard.folder_invitation.title=Folder Invitation
-##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
+##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 ##wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 ##wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
 ##wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
@@ -1687,12 +1705,12 @@ wizard.load_invitation.select_file=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u
 ##wizard.multi_folder_setup.title=Configure Folders
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
-##wizard.multi_online_storage_setup.title=Configure Online Storage Folders
+##wizard.multi_online_storage_setup.title=Configure Online Folders
 ##wizard.pfwizard.title=Folder Wizard
 ##wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-##wizard.select_online_storage.info=Please select Online Storage folders to join locally
-##wizard.select_online_storage.title=Select Online Storage folders
+##wizard.select_online_storage.info=Please select online folders to join locally
+##wizard.select_online_storage.title=Select Online Folders
 ##wizard.send_invitations.add_message.text=Attach personalized message
 ##wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 ##wizard.send_invitations.information=What is an invitation?
@@ -1750,6 +1768,7 @@ wizard.webservice.username=\u0627\u0644\u0628\u0631\u064a\u062f \u0627\u0644\u06
 ##wizard.what_to_do.join_online.tip=Sync files from previously setup computers with this computer
 ##wizard.what_to_do.load_invite=Open invitation file
 ##wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
+##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 ##wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.open_online_documentation=\u0627\u0641\u062a\u062d \u0645\u0644\u0641 \u0639\u0628\u0631 \u0627\u0644\u062e\u0637
