--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -6,6 +6,10 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Original English texts for existing translations are
+# indicated with a proceeding #orig#.
+# Please check if the meaning is still the same.
+#
 # Pro version translations start with the prefix 'pro.'
 #
 # There is also a guide on our offical webpage under
@@ -402,17 +406,6 @@ check_status.title=Statut de mon PowerFolder
 
 ##connection_quality_poor.text=Poor connection quality
 
-#orig#date_format.detailed_time=[HH\:mm\:ss\:SSS]
-date_format.detailed_time=[HH\:mm\:ss\:SSS]
-#orig#date_format.file_date=MM/dd/yyyy HH\:mm
-date_format.file_date=MM/jj/aaaa HH\:mm
-#orig#date_format.file_date_hours=HH\:mm
-date_format.file_date_hours=HH\:mm
-#orig#date_format.full_date=MM/dd/yyyy HH\:mm\:ss
-date_format.full_date=MM/jj/aaaa HH\:mm\:ss
-#orig#date_format.time_only_date=[HH\:mm\:ss]
-date_format.time_only_date=[HH\:mm\:ss]
-
 ##debug_information_card.title=Debug
 
 ##delete.busy.description=Moving file from your folder to recycle bin
@@ -427,9 +420,9 @@ dialog.already_running.title=D\u00e9j\u00e0 en cours d'ex\u00e9cution
 #orig#dialog.already_running.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder fonctionne d\u00e9j\u00e0\n\nInfo\: Si vous red\u00e9marrez PowerFolder, \n arr\u00eatez tous les processus javaw/java avant de relancer le programme
 ##dialog.ask_for_friendship.button.add=Add to friends
-##dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.ask_for_friendship.explain=PowerFolder automatically connects\nto computers on your friendslist.
 ##dialog.ask_for_friendship.message_title=Message from {0}
-##dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.ask_for_friendship.question={0} joined these PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.title=Add {0} to friend list
 ##dialog.ask_for_quit_on_x.Exit_button=Exit
@@ -547,7 +540,7 @@ dialog.unable_to_open_port=Impossible d'ouvrir localement le port {0}, v\u00e9ri
 ##dialog.update.updating.text=Downloading update
 ##dialog.update_check.downloadAndUpdate=Download and update now
 ##dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-##dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+##dialog.update_check.failed.text=Update failed. Please check your Internet connection.
 ##dialog.update_check.failed.title=Update failed
 ##dialog.update_check.gotoHomepage=Go to PowerFolder homepage
 ##dialog.update_check.noUpdateAvailable=This version is up to date
@@ -560,6 +553,7 @@ dialog.unable_to_open_port=Impossible d'ouvrir localement le port {0}, v\u00e9ri
 
 ##downloads_information_card.auto_cleanup.days={0} day(s)
 ##downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
+##downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##downloads_information_card.auto_cleanup.immediate=Immediate
 ##downloads_information_card.auto_cleanup.name=Auto-cleanup
 ##downloads_information_card.title=Downloads
@@ -582,7 +576,7 @@ estimation.unknown=Inconnue
 ##exp_folder_view.estimated_synchronized=Estimated synchronized\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
-##exp_folder_view.files_available={0} file(s) available
+##exp_folder_view.files_available={0} available
 ##exp_folder_view.files_available_tip=Display the available files
 ##exp_folder_view.folder_local_online_text=Local folder, backed up online
 ##exp_folder_view.folder_local_text=Local folder
@@ -592,6 +586,7 @@ estimation.unknown=Inconnue
 ##exp_folder_view.local={0} local
 ##exp_folder_view.members=Members\: {0} ({1} connected)
 ##exp_folder_view.never_synchronized=Never synchronized
+##exp_folder_view.new_files_tip_text={0} new file(s)
 ##exp_folder_view.not_yet_scanned=Not yet scanned
 ##exp_folder_view.synchronized={0}% synchronized
 ##exp_folder_view.total={0} total
@@ -631,7 +626,10 @@ file_info.recently_downloaded=Transferts r\u00e9cents
 #orig#file_info.remote_deleted=Newer version deleted by other computer
 file_info.remote_deleted=Nouvelle version effac\u00e9e par un autre utilisateur
 
+##file_version_tab.current_version=Current version\: {0}
+##file_version_tab.date=Date\: {0}
 ##file_version_tab.no_versions_available=No version history available
+##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
 ##file_versions_table_model.size=Size
@@ -824,9 +822,13 @@ friends_panel.n_a=n/a
 #orig#friends_panel.unable_to_connect=Currently online (Unable to connect)
 friends_panel.unable_to_connect=Actuellement en ligne (Impossible de connecter)
 
+##friendship.notification.message=You have received a request for friendship.
+##friendship.notification.title=Friendship Request Received
+
 #orig#general.accept=Accept
 general.accept=Accepter
 ##general.application.name=PowerFolder
+##general.apply=Apply
 ##general.archive_mode=File archive (local)
 #orig#general.cancel=Cancel
 general.cancel=Annuler
@@ -861,8 +863,6 @@ general.friday=Vendredi
 general.hours=Heure(s)
 #orig#general.inviter=Inviter
 general.inviter=Inviteur
-#orig#general.lan_only=LAN only
-general.network_mode.lan_only=LAN uniquement
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=Emplacement du dossier \u00e0 partager
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -877,6 +877,10 @@ general.minutes=Minute(s)
 general.monday=Lundi
 #orig#general.more.lower_case=more
 general.more.lower_case=plus
+#orig#general.network_mode.lan_only=LAN only
+general.network_mode.lan_only=LAN uniquement
+##general.network_mode.private=LAN and Internet
+##general.network_mode.server_only=Server only
 #orig#general.neverAskAgain=Never ask this again
 general.neverAskAgain=Ne plus me le demander
 #orig#general.not_available=not available
@@ -902,7 +906,6 @@ general.save.key=S
 #orig#general.seconds=Second(s)
 general.seconds=Seconde(s)
 ##general.server=Server
-##general.server_only=Server only
 #orig#general.size=Size
 general.size=Taille
 #orig#general.sunday=Sunday
@@ -928,10 +931,10 @@ general.yesterday=Hier
 
 ##home_tab.computers=Computer(s)
 ##home_tab.files_available=File(s) available
-##home_tab.files_downloaded=File(s) downloaded
-##home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
-##home_tab.files_uploaded=File(s) uploaded
-##home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
+##home_tab.files_downloads=Download(s)
+##home_tab.files_downloads_active=Download(s) ({0} KB/s)
+##home_tab.files_uploads=Upload(s)
+##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
 ##home_tab.folders=Folder(s)
 ##home_tab.in_sync=All folders are synchronized
 ##home_tab.last_synced=Last synchronized {0}
@@ -971,6 +974,8 @@ image_file_info.resolution=R\u00e9solution
 #orig#image_file_info.unknown=Unknown
 image_file_info.unknown=Inconnu
 
+##invitation.notification.message=You have received an invitation to a folder.
+##invitation.notification.title=Invitation Received
 #orig#invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.text=Erreur pendant la cr\u00e9ation de l'invitation, merci d'essayer \u00e0 nouveau.
 #orig#invitation.utils.unable.write.title=Unable to write invitation
@@ -1021,7 +1026,7 @@ low_memory.configure_failure=PowerFolder ne peut pas utiliser d'avantage de m\u0
 low_memory.configure_success=M\u00e9moire suppl\u00e9mentaire configur\u00e9e.\nRed\u00e9marrer PowerFolder manuellement pour la comptabiliser.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=Ne rien faire
-##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Augmenter la m\u00e9moire
@@ -1096,11 +1101,6 @@ notification_handler.display.text=Afficher
 #orig#notification_handler.ignore.text=Ignore
 notification_handler.ignore.text=Ignorer
 
-#orig#number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
-number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
-#orig#number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
-number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
-
 #orig#online_label.connecting=Connecting
 online_label.connecting=Connexion en cours
 #orig#online_label.disabled=Disabled
@@ -1113,10 +1113,10 @@ online_storage.account_data=Impossible de se connecter. V\u00e9rifier les inform
 ##online_storage.connecting=Connecting to server
 
 ##online_storage_component.online_storage_text=Online storage\: {0}%
+##online_storage_component.online_storage_tip=Open this online storage folder in browser
+##online_storage_component.online_storage_unjoined_text=Online Storage\: 0% (start now)
+##online_storage_component.online_storage_unjoined_tip=Backup this folder to Online Storage
 ##online_storage_component.online_storage_warning=Online storage quota exceeded
-
-#orig#percent.place.holder={0}%
-percent.place.holder={0}%
 
 ##permissions.folder.admin=Admin
 ##permissions.folder.default=default
@@ -1163,6 +1163,7 @@ preferences.dialog.bind.tooltip=S\u00e9lectionner l'adresse utilis\u00e9e par Po
 preferences.dialog.bindDescr=Description de l'interface
 #orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.create_desktop_shortcuts=Raccourcis sur le bureau Windows
+##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=Utiliser la synchronisation diff\u00e9rentielle
 #orig#preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
@@ -1336,8 +1337,10 @@ preferences.dialog.titleProcessing=Execution...
 preferences.dialog.use.relayed.connections=Relayer les connexions pour am\u00e9liorer la connectivit\u00e9
 ##preferences.dialog.use.udt.connections=Use UDT connections
 ##preferences.dialog.use_delta_on_internet=on Internet
+##preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
 #orig#preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.use_delta_on_lan=Utiliser la synchronisation diff\u00e9rentielle sur le r\u00e9seau LAN
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
 ##preferences.dialog.use_mass_delete=Use mass delete protection
 #orig#preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.use_pf_icon=Utiliser l'ic\u00f4ne PowerFolder dans Windows
@@ -1610,7 +1613,7 @@ status.download=%.2f Ko/s
 status.upload=%.2f Ko/s
 
 ##status_bar.no_sleep.tips=Enable folder change scanning
-##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
+##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 #orig#status_bar.status_change.connected=PowerFolder is connected
@@ -1619,6 +1622,8 @@ status_bar.status_change.connected=PowerFolder est connect\u00e9
 status_bar.status_change.disabled=PowerFolder est inactif
 #orig#status_bar.status_change.title=Connection Status
 status_bar.status_change.title=Etat de la connexion
+
+##sync_icon_button_mini.tip=Synchronize folder now
 
 #orig#synchronization.notice.title=Activated transfer mode {0}
 synchronization.notice.title=Activation du profil de synchronisation {0}
@@ -1741,6 +1746,7 @@ transfers.verifying=V\u00e9rification de la synchronisation
 
 ##uploads_information_card.auto_cleanup.days={0} day(s)
 ##uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
+##uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##uploads_information_card.auto_cleanup.immediate=Immediate
 ##uploads_information_card.auto_cleanup.name=Auto-cleanup
 ##uploads_information_card.title=Uploads
@@ -1753,12 +1759,14 @@ user.dir.custom=Personnalisation
 user.dir.desktop=Bureau
 #orig#user.dir.documents=Documents
 user.dir.documents=Documents
+##user.dir.downloads=Downloads
 #orig#user.dir.evolution=Evolution
 user.dir.evolution=Evolution
 #orig#user.dir.favorites=Favorites
 user.dir.favorites=Favoris
 #orig#user.dir.links=Links
 user.dir.links=Liens
+##user.dir.movies=Movies
 #orig#user.dir.music=Music
 user.dir.music=Musique
 #orig#user.dir.my_documents=My Documents
@@ -1771,8 +1779,10 @@ user.dir.my_pictures=Mes images
 user.dir.my_videos=Mes vid\u00e9os
 #orig#user.dir.pictures=Pictures
 user.dir.pictures=Images
+##user.dir.public=Public
 #orig#user.dir.recent_documents=Recent Documents
 user.dir.recent_documents=Documents r\u00e9cents
+##user.dir.sites=Sites
 #orig#user.dir.videos=Videos
 user.dir.videos=Vid\u00e9os
 
@@ -1842,7 +1852,7 @@ wizard.control.next.description=Avancer \u00e0 l'\u00e9\u00e9tape suivante
 ##wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 #orig#wizard.folder_invitation.title=Folder Invitation
 wizard.folder_invitation.title=Dossier d'invitation
-##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
+##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 ##wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 ##wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
 ##wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
@@ -1870,13 +1880,13 @@ wizard.login_online_storage.setup_default=Configurer le dossier de synchronisati
 ##wizard.multi_folder_setup.title=Configure Folders
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
-##wizard.multi_online_storage_setup.title=Configure Online Storage Folders
+##wizard.multi_online_storage_setup.title=Configure Online Folders
 ##wizard.pfwizard.title=Folder Wizard
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=Cr\u00e9ation d'un dossier de projet r\u00e9ussie\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-##wizard.select_online_storage.info=Please select Online Storage folders to join locally
-##wizard.select_online_storage.title=Select Online Storage folders
+##wizard.select_online_storage.info=Please select online folders to join locally
+##wizard.select_online_storage.title=Select Online Folders
 ##wizard.send_invitations.add_message.text=Attach personalized message
 ##wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 ##wizard.send_invitations.information=What is an invitation?
@@ -1945,6 +1955,7 @@ wizard.what_to_do.invite.select_local=Merci d'indiquer le dossier local cible po
 #orig#wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.load_invite=Ouvrir une invitation
 ##wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
+##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 ##wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.open_online_documentation=Ouvrir la documentation en ligne
