--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -6,6 +6,10 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Original English texts for existing translations are
+# indicated with a proceeding #orig#.
+# Please check if the meaning is still the same.
+#
 # Pro version translations start with the prefix 'pro.'
 #
 # There is also a guide on our offical webpage under
@@ -402,17 +406,6 @@ check_status.title=\u30de\u30a4 \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u306e
 
 ##connection_quality_poor.text=Poor connection quality
 
-#orig#date_format.detailed_time=[HH\:mm\:ss\:SSS]
-date_format.detailed_time=[HH\:mm\:ss\:SSS]
-#orig#date_format.file_date=MM/dd/yyyy HH\:mm
-date_format.file_date=yyyy/MM/dd HH\:mm
-#orig#date_format.file_date_hours=HH\:mm
-date_format.file_date_hours=HH\:mm
-#orig#date_format.full_date=MM/dd/yyyy HH\:mm\:ss
-date_format.full_date=yyyy/MM/dd HH\:mm\:ss
-#orig#date_format.time_only_date=[HH\:mm\:ss]
-date_format.time_only_date=[HH\:mm\:ss]
-
 ##debug_information_card.title=Debug
 
 ##delete.busy.description=Moving file from your folder to recycle bin
@@ -427,9 +420,9 @@ dialog.already_running.title=\u3059\u3067\u306b\u7a3c\u50cd\u4e2d
 #orig#dialog.already_running.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder \u306f\u3059\u3067\u306b\u7a3c\u52d5\u3057\u3066\u3044\u307e\u3059\u3002\n\n\u30d2\u30f3\u30c8\:  PowerFolder \u306e\u518d\u8d77\u52d5\u3092\u884c\u3063\u3066\u3044\u305f\u5834\u5408\u306f\u3001\njavaw/java \u30d7\u30ed\u30bb\u30b9\u3092\u3059\u3079\u3066\u505c\u6b62\u3057\u3066\u304b\u3089\u3001\u3082\u3046\u4e00\u5ea6\u8a66\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 ##dialog.ask_for_friendship.button.add=Add to friends
-##dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.ask_for_friendship.explain=PowerFolder automatically connects\nto computers on your friendslist.
 ##dialog.ask_for_friendship.message_title=Message from {0}
-##dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.ask_for_friendship.question={0} joined these PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.title=Add {0} to friend list
 ##dialog.ask_for_quit_on_x.Exit_button=Exit
@@ -547,7 +540,7 @@ dialog.unable_to_open_port=\u30ed\u30fc\u30ab\u30eb\u30dd\u30fc\u30c8 {0} \u3092
 ##dialog.update.updating.text=Downloading update
 ##dialog.update_check.downloadAndUpdate=Download and update now
 ##dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-##dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+##dialog.update_check.failed.text=Update failed. Please check your Internet connection.
 ##dialog.update_check.failed.title=Update failed
 ##dialog.update_check.gotoHomepage=Go to PowerFolder homepage
 ##dialog.update_check.noUpdateAvailable=This version is up to date
@@ -560,6 +553,7 @@ dialog.unable_to_open_port=\u30ed\u30fc\u30ab\u30eb\u30dd\u30fc\u30c8 {0} \u3092
 
 ##downloads_information_card.auto_cleanup.days={0} day(s)
 ##downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
+##downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##downloads_information_card.auto_cleanup.immediate=Immediate
 ##downloads_information_card.auto_cleanup.name=Auto-cleanup
 ##downloads_information_card.title=Downloads
@@ -582,7 +576,7 @@ estimation.unknown=\u4e0d\u660e
 ##exp_folder_view.estimated_synchronized=Estimated synchronized\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
-##exp_folder_view.files_available={0} file(s) available
+##exp_folder_view.files_available={0} available
 ##exp_folder_view.files_available_tip=Display the available files
 ##exp_folder_view.folder_local_online_text=Local folder, backed up online
 ##exp_folder_view.folder_local_text=Local folder
@@ -592,6 +586,7 @@ estimation.unknown=\u4e0d\u660e
 ##exp_folder_view.local={0} local
 ##exp_folder_view.members=Members\: {0} ({1} connected)
 ##exp_folder_view.never_synchronized=Never synchronized
+##exp_folder_view.new_files_tip_text={0} new file(s)
 ##exp_folder_view.not_yet_scanned=Not yet scanned
 ##exp_folder_view.synchronized={0}% synchronized
 ##exp_folder_view.total={0} total
@@ -631,7 +626,10 @@ file_info.recently_downloaded=\u6700\u8fd1\u306e\u30c0\u30a6\u30f3\u30ed\u30fc\u
 #orig#file_info.remote_deleted=Newer version deleted by other computer
 file_info.remote_deleted=\u66f4\u65b0\u7248 \u4ed6\u30e6\u30fc\u30b6\u30fc\u306b\u3088\u308a\u524a\u9664
 
+##file_version_tab.current_version=Current version\: {0}
+##file_version_tab.date=Date\: {0}
 ##file_version_tab.no_versions_available=No version history available
+##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
 ##file_versions_table_model.size=Size
@@ -824,9 +822,13 @@ friends_panel.n_a=n/a
 #orig#friends_panel.unable_to_connect=Currently online (Unable to connect)
 friends_panel.unable_to_connect=\u73fe\u5728\u30aa\u30f3\u30e9\u30a4\u30f3\uff08\u63a5\u7d9a\u4e0d\u53ef\uff09
 
+##friendship.notification.message=You have received a request for friendship.
+##friendship.notification.title=Friendship Request Received
+
 #orig#general.accept=Accept
 general.accept=\u8a31\u8afe
 ##general.application.name=PowerFolder
+##general.apply=Apply
 ##general.archive_mode=File archive (local)
 #orig#general.cancel=Cancel
 general.cancel=\u53d6\u6d88\u3057(C)
@@ -861,8 +863,6 @@ general.friday=\u91d1\u66dc\u65e5
 general.hours=\u6642\u9593
 #orig#general.inviter=Inviter
 general.inviter=\u62db\u5f85\u4e3b
-#orig#general.lan_only=LAN only
-general.network_mode.lan_only=LAN \u9650\u5b9a
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -877,6 +877,10 @@ general.minutes=\u5206
 general.monday=\u6708\u66dc\u65e5
 #orig#general.more.lower_case=more
 general.more.lower_case=\u8a73\u7d30
+#orig#general.network_mode.lan_only=LAN only
+general.network_mode.lan_only=LAN \u9650\u5b9a
+##general.network_mode.private=LAN and Internet
+##general.network_mode.server_only=Server only
 #orig#general.neverAskAgain=Never ask this again
 general.neverAskAgain=\u4eca\u5f8c\u3053\u306e\u8cea\u554f\u3092\u3057\u306a\u3044
 #orig#general.not_available=not available
@@ -902,7 +906,6 @@ general.save.key=S
 #orig#general.seconds=Second(s)
 general.seconds=\u79d2
 ##general.server=Server
-##general.server_only=Server only
 #orig#general.size=Size
 general.size=\u30b5\u30a4\u30ba
 #orig#general.sunday=Sunday
@@ -928,10 +931,10 @@ general.yesterday=\u6628\u65e5
 
 ##home_tab.computers=Computer(s)
 ##home_tab.files_available=File(s) available
-##home_tab.files_downloaded=File(s) downloaded
-##home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
-##home_tab.files_uploaded=File(s) uploaded
-##home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
+##home_tab.files_downloads=Download(s)
+##home_tab.files_downloads_active=Download(s) ({0} KB/s)
+##home_tab.files_uploads=Upload(s)
+##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
 ##home_tab.folders=Folder(s)
 ##home_tab.in_sync=All folders are synchronized
 ##home_tab.last_synced=Last synchronized {0}
@@ -971,6 +974,8 @@ image_file_info.resolution=\u89e3\u50cf\u5ea6
 #orig#image_file_info.unknown=Unknown
 image_file_info.unknown=\u4e0d\u660e
 
+##invitation.notification.message=You have received an invitation to a folder.
+##invitation.notification.title=Invitation Received
 #orig#invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.text=\u62db\u5f85\u72b6\u306e\u66f8\u304d\u8fbc\u307f\u4e2d\u306b\u30a8\u30e9\u30fc\u767a\u751f\u3002\u3082\u3046\u4e00\u5ea6\u8a66\u3057\u3066\u307f\u3066\u304f\u3060\u3055\u3044\u3002
 #orig#invitation.utils.unable.write.title=Unable to write invitation
@@ -1021,7 +1026,7 @@ low_memory.configure_failure=PowerFolder \u306f\u8ffd\u52a0\u7684\u30e1\u30e2\u3
 low_memory.configure_success=\u8ffd\u52a0\u7684\u30e1\u30e2\u30ea\u3092\u8a2d\u5b9a\u3057\u307e\u3057\u305f\u3002\n\u3053\u308c\u3092\u53cd\u6620\u3055\u305b\u308b\u306b\u306f PowerFolder \u306e\u518d\u30b9\u30bf\u30fc\u30c8\u304c\u5fc5\u8981\u3067\u3059\u3002
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=\u4f55\u3082\u3057\u306a\u3044
-##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=\u30e1\u30e2\u30ea\u3092\u5897\u3084\u3059
@@ -1096,11 +1101,6 @@ notification_handler.display.text=\u8868\u793a
 #orig#notification_handler.ignore.text=Ignore
 notification_handler.ignore.text=\u7121\u8996
 
-#orig#number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
-number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
-#orig#number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
-number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
-
 #orig#online_label.connecting=Connecting
 online_label.connecting=\u63a5\u7d9a\u8a66\u884c\u7d99\u7d9a\u4e2d
 #orig#online_label.disabled=Disabled
@@ -1113,10 +1113,10 @@ online_storage.account_data=\u30ed\u30b0\u30a4\u30f3\u3067\u304d\u307e\u305b\u30
 ##online_storage.connecting=Connecting to server
 
 ##online_storage_component.online_storage_text=Online storage\: {0}%
+##online_storage_component.online_storage_tip=Open this online storage folder in browser
+##online_storage_component.online_storage_unjoined_text=Online Storage\: 0% (start now)
+##online_storage_component.online_storage_unjoined_tip=Backup this folder to Online Storage
 ##online_storage_component.online_storage_warning=Online storage quota exceeded
-
-#orig#percent.place.holder={0}%
-percent.place.holder={0}%
 
 ##permissions.folder.admin=Admin
 ##permissions.folder.default=default
@@ -1163,6 +1163,7 @@ preferences.dialog.bind.tooltip=PowerFolder \u3067\u4f7f\u7528\u3059\u308b\u30a2
 preferences.dialog.bindDescr=\u30a4\u30f3\u30bf\u30fc\u30d5\u30a7\u30a4\u30b9\u306e\u8aac\u660e
 #orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.create_desktop_shortcuts=\u30c7\u30b9\u30af\u30c8\u30c3\u30d7\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u306e\u4f5c\u6210
+##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=\u30c7\u30eb\u30bf\u540c\u671f\u3092\u4f7f\u7528
 #orig#preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
@@ -1336,8 +1337,10 @@ preferences.dialog.titleProcessing=\u51e6\u7406\u4e2d...
 preferences.dialog.use.relayed.connections=\u63a5\u7d9a\u6027\u5411\u4e0a\u306e\u305f\u3081\u4e2d\u7d99\u63a5\u7d9a\u3092\u4f7f\u7528
 ##preferences.dialog.use.udt.connections=Use UDT connections
 ##preferences.dialog.use_delta_on_internet=on Internet
+##preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
 #orig#preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.use_delta_on_lan=LAN\u5185\u3067\u30c7\u30eb\u30bf\u540c\u671f\u3092\u4f7f\u7528
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
 ##preferences.dialog.use_mass_delete=Use mass delete protection
 #orig#preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.use_pf_icon=Windows \u3067 PowerFolder \u30a2\u30a4\u30b3\u30f3\u3092\u4f7f\u7528
@@ -1605,7 +1608,7 @@ status.download=%.2f KB/s
 status.upload=%.2f KB/s
 
 ##status_bar.no_sleep.tips=Enable folder change scanning
-##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
+##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 #orig#status_bar.status_change.connected=PowerFolder is connected
@@ -1614,6 +1617,8 @@ status_bar.status_change.connected=PowerFolder \u306f\u63a5\u7d9a\u72b6\u614b\u3
 status_bar.status_change.disabled=PowerFolder \u306f\u7121\u52b9\u72b6\u614b\u3067\u3059
 #orig#status_bar.status_change.title=Connection Status
 status_bar.status_change.title=\u63a5\u7d9a\u30b9\u30c6\u30fc\u30bf\u30b9
+
+##sync_icon_button_mini.tip=Synchronize folder now
 
 #orig#synchronization.notice.title=Activated transfer mode {0}
 synchronization.notice.title={0} \u540c\u671f\u65b9\u5f0f\u306e\u6709\u52b9\u5316
@@ -1735,6 +1740,7 @@ transfers.verifying=\u5b8c\u4e86\u51e6\u7406\u4e2d
 
 ##uploads_information_card.auto_cleanup.days={0} day(s)
 ##uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
+##uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##uploads_information_card.auto_cleanup.immediate=Immediate
 ##uploads_information_card.auto_cleanup.name=Auto-cleanup
 ##uploads_information_card.title=Uploads
@@ -1747,12 +1753,14 @@ user.dir.custom=\u30ab\u30b9\u30bf\u30e0
 user.dir.desktop=\u30c7\u30b9\u30af\u30c8\u30c3\u30d7
 #orig#user.dir.documents=Documents
 user.dir.documents=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8
+##user.dir.downloads=Downloads
 #orig#user.dir.evolution=Evolution
 user.dir.evolution=Evolution
 #orig#user.dir.favorites=Favorites
 user.dir.favorites=\u304a\u6c17\u306b\u5165\u308a
 #orig#user.dir.links=Links
 user.dir.links=\u30ea\u30f3\u30af
+##user.dir.movies=Movies
 #orig#user.dir.music=Music
 user.dir.music=\u97f3\u697d
 #orig#user.dir.my_documents=My Documents
@@ -1765,8 +1773,10 @@ user.dir.my_pictures=\u30de\u30a4 \u30d4\u30af\u30c1\u30e3
 user.dir.my_videos=\u30de\u30a4 \u30d3\u30c7\u30aa
 #orig#user.dir.pictures=Pictures
 user.dir.pictures=\u5199\u771f
+##user.dir.public=Public
 #orig#user.dir.recent_documents=Recent Documents
 user.dir.recent_documents=\u6700\u8fd1\u306e\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8
+##user.dir.sites=Sites
 #orig#user.dir.videos=Videos
 user.dir.videos=\u52d5\u753b
 
@@ -1834,7 +1844,7 @@ wizard.control.next.description=\u6b21\u306e\u6bb5\u968e\u306b\u9032\u3080
 ##wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 #orig#wizard.folder_invitation.title=Folder Invitation
 wizard.folder_invitation.title=\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u62db\u5f85\u72b6
-##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
+##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 ##wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 ##wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
 ##wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
@@ -1862,13 +1872,13 @@ wizard.login_online_storage.setup_default=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u
 ##wizard.multi_folder_setup.title=Configure Folders
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
-##wizard.multi_online_storage_setup.title=Configure Online Storage Folders
+##wizard.multi_online_storage_setup.title=Configure Online Folders
 ##wizard.pfwizard.title=Folder Wizard
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30fb\u30d5\u30a9\u30eb\u30c0\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u306b\u6210\u529f\u3057\u307e\u3057\u305f\uff01\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-##wizard.select_online_storage.info=Please select Online Storage folders to join locally
-##wizard.select_online_storage.title=Select Online Storage folders
+##wizard.select_online_storage.info=Please select online folders to join locally
+##wizard.select_online_storage.title=Select Online Folders
 ##wizard.send_invitations.add_message.text=Attach personalized message
 ##wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 ##wizard.send_invitations.information=What is an invitation?
@@ -1937,6 +1947,7 @@ wizard.what_to_do.invite.select_local=\u30d5\u30a1\u30a4\u30eb\u306e\u30ed\u30fc
 #orig#wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.load_invite=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u3092\u958b\u304f
 ##wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
+##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 ##wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.open_online_documentation=\u30aa\u30f3\u30e9\u30a4\u30f3\u8aac\u660e\u3092\u958b\u304f
