--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -6,6 +6,10 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Original English texts for existing translations are
+# indicated with a proceeding #orig#.
+# Please check if the meaning is still the same.
+#
 # Pro version translations start with the prefix 'pro.'
 #
 # There is also a guide on our offical webpage under
@@ -391,12 +395,6 @@ chat_panel.member_disconnected_at_time={0} verbrak de verbinding om {1}
 
 ##connection_quality_poor.text=Poor connection quality
 
-##date_format.detailed_time=[HH\:mm\:ss\:SSS]
-##date_format.file_date=MM/dd/yyyy HH\:mm
-##date_format.file_date_hours=HH\:mm
-##date_format.full_date=MM/dd/yyyy HH\:mm\:ss
-##date_format.time_only_date=[HH\:mm\:ss]
-
 ##debug_information_card.title=Debug
 
 ##delete.busy.description=Moving file from your folder to recycle bin
@@ -411,9 +409,9 @@ dialog.already_running.title=al gestart
 #orig#dialog.already_running.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder is al gestart\n\nHint\: Als u PowerFolder opnieuw heeft gestart, \nVerwijder alle javaw/java processen en probeer opnieuw
 ##dialog.ask_for_friendship.button.add=Add to friends
-##dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.ask_for_friendship.explain=PowerFolder automatically connects\nto computers on your friendslist.
 ##dialog.ask_for_friendship.message_title=Message from {0}
-##dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.ask_for_friendship.question={0} joined these PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.title=Add {0} to friend list
 ##dialog.ask_for_quit_on_x.Exit_button=Exit
@@ -504,7 +502,7 @@ dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is miss
 ##dialog.update.updating.text=Downloading update
 ##dialog.update_check.downloadAndUpdate=Download and update now
 ##dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-##dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+##dialog.update_check.failed.text=Update failed. Please check your Internet connection.
 ##dialog.update_check.failed.title=Update failed
 ##dialog.update_check.gotoHomepage=Go to PowerFolder homepage
 ##dialog.update_check.noUpdateAvailable=This version is up to date
@@ -517,6 +515,7 @@ dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is miss
 
 ##downloads_information_card.auto_cleanup.days={0} day(s)
 ##downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
+##downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##downloads_information_card.auto_cleanup.immediate=Immediate
 ##downloads_information_card.auto_cleanup.name=Auto-cleanup
 ##downloads_information_card.title=Downloads
@@ -538,7 +537,7 @@ dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is miss
 ##exp_folder_view.estimated_synchronized=Estimated synchronized\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
-##exp_folder_view.files_available={0} file(s) available
+##exp_folder_view.files_available={0} available
 ##exp_folder_view.files_available_tip=Display the available files
 ##exp_folder_view.folder_local_online_text=Local folder, backed up online
 ##exp_folder_view.folder_local_text=Local folder
@@ -548,6 +547,7 @@ dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is miss
 ##exp_folder_view.local={0} local
 ##exp_folder_view.members=Members\: {0} ({1} connected)
 ##exp_folder_view.never_synchronized=Never synchronized
+##exp_folder_view.new_files_tip_text={0} new file(s)
 ##exp_folder_view.not_yet_scanned=Not yet scanned
 ##exp_folder_view.synchronized={0}% synchronized
 ##exp_folder_view.total={0} total
@@ -586,7 +586,10 @@ file_info.name=Naam
 #orig#file_info.remote_deleted=Newer version deleted by other computer
 file_info.remote_deleted=Nieuwere versie verwijderd door ander gebruiker
 
+##file_version_tab.current_version=Current version\: {0}
+##file_version_tab.date=Date\: {0}
 ##file_version_tab.no_versions_available=No version history available
+##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
 ##file_versions_table_model.size=Size
@@ -763,8 +766,12 @@ friends_panel.n_a=n/b
 #orig#friends_panel.unable_to_connect=Currently online (Unable to connect)
 friends_panel.unable_to_connect=Momenteel online (Niet mogelijk te verbinden)
 
+##friendship.notification.message=You have received a request for friendship.
+##friendship.notification.title=Friendship Request Received
+
 ##general.accept=Accept
 ##general.application.name=PowerFolder
+##general.apply=Apply
 ##general.archive_mode=File archive (local)
 #orig#general.cancel=Cancel
 general.cancel=Annuleren
@@ -792,7 +799,6 @@ general.folder_name=Naam
 ##general.friday=Friday
 ##general.hours=Hour(s)
 ##general.inviter=Inviter
-##general.lan_only=LAN only
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=Lokale kopie
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -803,6 +809,9 @@ general.localnet=lokaal
 ##general.minutes=Minute(s)
 ##general.monday=Monday
 ##general.more.lower_case=more
+##general.network_mode.lan_only=LAN only
+##general.network_mode.private=LAN and Internet
+##general.network_mode.server_only=Server only
 ##general.neverAskAgain=Never ask this again
 #orig#general.not_available=not available
 general.not_available=Niet beschikbaar
@@ -822,7 +831,6 @@ general.powerfolder=PowerFolder
 ##general.search=Search
 ##general.seconds=Second(s)
 ##general.server=Server
-##general.server_only=Server only
 #orig#general.size=Size
 general.size=Omvang
 ##general.sunday=Sunday
@@ -843,10 +851,10 @@ general.yesterday=vandaag
 
 ##home_tab.computers=Computer(s)
 ##home_tab.files_available=File(s) available
-##home_tab.files_downloaded=File(s) downloaded
-##home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
-##home_tab.files_uploaded=File(s) uploaded
-##home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
+##home_tab.files_downloads=Download(s)
+##home_tab.files_downloads_active=Download(s) ({0} KB/s)
+##home_tab.files_uploads=Upload(s)
+##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
 ##home_tab.folders=Folder(s)
 ##home_tab.in_sync=All folders are synchronized
 ##home_tab.last_synced=Last synchronized {0}
@@ -886,6 +894,8 @@ image_file_info.resolution=Resolutie
 #orig#image_file_info.unknown=Unknown
 image_file_info.unknown=Onbekend
 
+##invitation.notification.message=You have received an invitation to a folder.
+##invitation.notification.title=Invitation Received
 ##invitation.utils.unable.write.text=Error while writing invitation, please try again.
 ##invitation.utils.unable.write.title=Unable to write invitation
 
@@ -931,7 +941,7 @@ line_speed.upload_speed=Upload limiet
 ##low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 ##low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
 ##low_memory.do_nothing=Do Nothing
-##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 ##low_memory.error.title=Out of memory
 ##low_memory.increase=Increase Memory
 ##low_memory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
@@ -999,9 +1009,6 @@ network_statistics_panel.public_folders_size=Totale omvang van alle beschikbare 
 ##notification_handler.display.text=Display
 ##notification_handler.ignore.text=Ignore
 
-##number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
-##number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
-
 #orig#online_label.connecting=Connecting
 online_label.connecting=Verbinden
 #orig#online_label.disabled=Disabled
@@ -1013,9 +1020,10 @@ online_label.online=Verbonden
 ##online_storage.connecting=Connecting to server
 
 ##online_storage_component.online_storage_text=Online storage\: {0}%
+##online_storage_component.online_storage_tip=Open this online storage folder in browser
+##online_storage_component.online_storage_unjoined_text=Online Storage\: 0% (start now)
+##online_storage_component.online_storage_unjoined_tip=Backup this folder to Online Storage
 ##online_storage_component.online_storage_warning=Online storage quota exceeded
-
-##percent.place.holder={0}%
 
 ##permissions.folder.admin=Admin
 ##permissions.folder.default=default
@@ -1062,6 +1070,7 @@ preferences.dialog.bind.tooltip=Selecteer het adres die PowerFolder moet gebruik
 preferences.dialog.bindDescr=Interface beschrijving
 #orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.create_desktop_shortcuts=Maak bureaublad snelkoppelingen
+##preferences.dialog.default_archive_mode.text=Default archive mode
 ##preferences.dialog.delta_sync=Delta sync
 ##preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 ##preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
@@ -1218,7 +1227,9 @@ preferences.dialog.titleProcessing=verwerken...
 ##preferences.dialog.use.relayed.connections=Use relayed connections
 ##preferences.dialog.use.udt.connections=Use UDT connections
 ##preferences.dialog.use_delta_on_internet=on Internet
+##preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
 ##preferences.dialog.use_delta_on_lan=on LAN
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
 ##preferences.dialog.use_mass_delete=Use mass delete protection
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 ##preferences.dialog.use_zip_on_internet=on Internet
@@ -1434,12 +1445,14 @@ status.download=%.2f KB/s
 status.upload=%.2f KB/s
 
 ##status_bar.no_sleep.tips=Enable folder change scanning
-##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
+##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 ##status_bar.status_change.connected=PowerFolder is connected
 ##status_bar.status_change.disabled=PowerFolder is disabled
 ##status_bar.status_change.title=Connection Status
+
+##sync_icon_button_mini.tip=Synchronize folder now
 
 #orig#synchronization.notice.title=Activated transfer mode {0}
 synchronization.notice.title=Gekozen synchronisatieprofiel {0}
@@ -1545,6 +1558,7 @@ transfers.to=Naar
 
 ##uploads_information_card.auto_cleanup.days={0} day(s)
 ##uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
+##uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##uploads_information_card.auto_cleanup.immediate=Immediate
 ##uploads_information_card.auto_cleanup.name=Auto-cleanup
 ##uploads_information_card.title=Uploads
@@ -1553,16 +1567,20 @@ transfers.to=Naar
 ##user.dir.custom=Custom
 ##user.dir.desktop=Desktop
 ##user.dir.documents=Documents
+##user.dir.downloads=Downloads
 ##user.dir.evolution=Evolution
 ##user.dir.favorites=Favorites
 ##user.dir.links=Links
+##user.dir.movies=Movies
 ##user.dir.music=Music
 ##user.dir.my_documents=My Documents
 ##user.dir.my_music=My Music
 ##user.dir.my_pictures=My Pictures
 ##user.dir.my_videos=My Videos
 ##user.dir.pictures=Pictures
+##user.dir.public=Public
 ##user.dir.recent_documents=Recent Documents
+##user.dir.sites=Sites
 ##user.dir.videos=Videos
 
 #orig#winutils.shortcut.description=This shortcut was placed here by PowerFolder
@@ -1621,7 +1639,7 @@ wizard.control.next=Volgende
 ##wizard.finish.os_login_title=Login Successful
 ##wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 ##wizard.folder_invitation.title=Folder Invitation
-##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
+##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 ##wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 ##wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
 ##wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
@@ -1648,12 +1666,12 @@ wizard.load_invitation.select_file=Selecteer een invitatie bestand
 ##wizard.multi_folder_setup.title=Configure Folders
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
-##wizard.multi_online_storage_setup.title=Configure Online Storage Folders
+##wizard.multi_online_storage_setup.title=Configure Online Folders
 ##wizard.pfwizard.title=Folder Wizard
 ##wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-##wizard.select_online_storage.info=Please select Online Storage folders to join locally
-##wizard.select_online_storage.title=Select Online Storage folders
+##wizard.select_online_storage.info=Please select online folders to join locally
+##wizard.select_online_storage.title=Select Online Folders
 ##wizard.send_invitations.add_message.text=Attach personalized message
 ##wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 ##wizard.send_invitations.information=What is an invitation?
@@ -1708,6 +1726,7 @@ wizard.webservice.username=E-mail
 ##wizard.what_to_do.join_online.tip=Sync files from previously setup computers with this computer
 ##wizard.what_to_do.load_invite=Open invitation file
 ##wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
+##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 ##wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.open_online_documentation=Open Documentatie op internet
