--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -6,6 +6,10 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Original English texts for existing translations are
+# indicated with a proceeding #orig#.
+# Please check if the meaning is still the same.
+#
 # Pro version translations start with the prefix 'pro.'
 #
 # There is also a guide on our offical webpage under
@@ -393,12 +397,6 @@ check_status.title=Estado de minhas pastas PowerFolder
 
 ##connection_quality_poor.text=Poor connection quality
 
-##date_format.detailed_time=[HH\:mm\:ss\:SSS]
-##date_format.file_date=MM/dd/yyyy HH\:mm
-##date_format.file_date_hours=HH\:mm
-##date_format.full_date=MM/dd/yyyy HH\:mm\:ss
-##date_format.time_only_date=[HH\:mm\:ss]
-
 ##debug_information_card.title=Debug
 
 ##delete.busy.description=Moving file from your folder to recycle bin
@@ -413,9 +411,9 @@ dialog.already_running.title=J\u00e1 em execu\u00e7\u00e3o
 #orig#dialog.already_running.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder j\u00e1 est\u00e1 em execu\u00e7\u00e3o\n\nDica\: Se voc\u00ea reiniciou o PowerFolder, \ntermine todos os processos javaw/java e tente novamente
 ##dialog.ask_for_friendship.button.add=Add to friends
-##dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.ask_for_friendship.explain=PowerFolder automatically connects\nto computers on your friendslist.
 ##dialog.ask_for_friendship.message_title=Message from {0}
-##dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.ask_for_friendship.question={0} joined these PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.title=Add {0} to friend list
 ##dialog.ask_for_quit_on_x.Exit_button=Exit
@@ -511,7 +509,7 @@ dialog.unable_to_open_port=N\u00e3o \u00e9 poss\u00edvel abrir a porta local {0}
 ##dialog.update.updating.text=Downloading update
 ##dialog.update_check.downloadAndUpdate=Download and update now
 ##dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-##dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+##dialog.update_check.failed.text=Update failed. Please check your Internet connection.
 ##dialog.update_check.failed.title=Update failed
 ##dialog.update_check.gotoHomepage=Go to PowerFolder homepage
 ##dialog.update_check.noUpdateAvailable=This version is up to date
@@ -524,6 +522,7 @@ dialog.unable_to_open_port=N\u00e3o \u00e9 poss\u00edvel abrir a porta local {0}
 
 ##downloads_information_card.auto_cleanup.days={0} day(s)
 ##downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
+##downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##downloads_information_card.auto_cleanup.immediate=Immediate
 ##downloads_information_card.auto_cleanup.name=Auto-cleanup
 ##downloads_information_card.title=Downloads
@@ -546,7 +545,7 @@ estimation.unknown=desconhecido
 ##exp_folder_view.estimated_synchronized=Estimated synchronized\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
-##exp_folder_view.files_available={0} file(s) available
+##exp_folder_view.files_available={0} available
 ##exp_folder_view.files_available_tip=Display the available files
 ##exp_folder_view.folder_local_online_text=Local folder, backed up online
 ##exp_folder_view.folder_local_text=Local folder
@@ -556,6 +555,7 @@ estimation.unknown=desconhecido
 ##exp_folder_view.local={0} local
 ##exp_folder_view.members=Members\: {0} ({1} connected)
 ##exp_folder_view.never_synchronized=Never synchronized
+##exp_folder_view.new_files_tip_text={0} new file(s)
 ##exp_folder_view.not_yet_scanned=Not yet scanned
 ##exp_folder_view.synchronized={0}% synchronized
 ##exp_folder_view.total={0} total
@@ -594,7 +594,10 @@ file_info.name=Nome
 #orig#file_info.remote_deleted=Newer version deleted by other computer
 file_info.remote_deleted=Vers\u00e3o mais recente apagada por outro usu\u00e1rio
 
+##file_version_tab.current_version=Current version\: {0}
+##file_version_tab.date=Date\: {0}
 ##file_version_tab.no_versions_available=No version history available
+##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
 ##file_versions_table_model.size=Size
@@ -780,9 +783,13 @@ friends_panel.n_a=n\u00e3o dispon\u00edvel
 #orig#friends_panel.unable_to_connect=Currently online (Unable to connect)
 friends_panel.unable_to_connect=Online agora (N\u00e3o \u00e9 poss\u00edvel conectar-se)
 
+##friendship.notification.message=You have received a request for friendship.
+##friendship.notification.title=Friendship Request Received
+
 #orig#general.accept=Accept
 general.accept=Aceitar
 ##general.application.name=PowerFolder
+##general.apply=Apply
 ##general.archive_mode=File archive (local)
 #orig#general.cancel=Cancel
 general.cancel=Cancelar
@@ -816,7 +823,6 @@ general.friday=Sexta-feira
 general.hours=Hora(s)
 #orig#general.inviter=Inviter
 general.inviter=Anfitri\u00e3o
-##general.lan_only=LAN only
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=C\u00f3pia local em
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -830,6 +836,9 @@ general.minutes=Minuto(s)
 #orig#general.monday=Monday
 general.monday=Segunda-feira
 ##general.more.lower_case=more
+##general.network_mode.lan_only=LAN only
+##general.network_mode.private=LAN and Internet
+##general.network_mode.server_only=Server only
 #orig#general.neverAskAgain=Never ask this again
 general.neverAskAgain=N\u00e3o pergunte isto novamente
 #orig#general.not_available=not available
@@ -853,7 +862,6 @@ general.saturday=S\u00e1bado
 #orig#general.seconds=Second(s)
 general.seconds=Segundo(s)
 ##general.server=Server
-##general.server_only=Server only
 #orig#general.size=Size
 general.size=Tamanho
 #orig#general.sunday=Sunday
@@ -879,10 +887,10 @@ general.yesterday=ontem
 
 ##home_tab.computers=Computer(s)
 ##home_tab.files_available=File(s) available
-##home_tab.files_downloaded=File(s) downloaded
-##home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
-##home_tab.files_uploaded=File(s) uploaded
-##home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
+##home_tab.files_downloads=Download(s)
+##home_tab.files_downloads_active=Download(s) ({0} KB/s)
+##home_tab.files_uploads=Upload(s)
+##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
 ##home_tab.folders=Folder(s)
 ##home_tab.in_sync=All folders are synchronized
 ##home_tab.last_synced=Last synchronized {0}
@@ -922,6 +930,8 @@ image_file_info.resolution=Resolu\u00e7\u00e3o
 #orig#image_file_info.unknown=Unknown
 image_file_info.unknown=Desconhecido
 
+##invitation.notification.message=You have received an invitation to a folder.
+##invitation.notification.title=Invitation Received
 #orig#invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.text=Erro durante o convite, por favor tente novamente.
 #orig#invitation.utils.unable.write.title=Unable to write invitation
@@ -972,7 +982,7 @@ low_memory.configure_failure=PowerFolder n\u00e3o conseguiu configurar mais mem\
 low_memory.configure_success=Configura\u00e7\u00e3o de mem\u00f3ria adicional bem sucedida.\nPara que a mem\u00f3ria adicional seja reconhecida PowerFolder deve ser reiniciado manualmente.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=Nenhuma a\u00e7\u00e3o
-##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Aumentar Mem\u00f3ria
@@ -1044,9 +1054,6 @@ network_statistics_panel.reconnection_queue_size=N\u00f3s na fila de reconex\u00
 ##notification_handler.display.text=Display
 ##notification_handler.ignore.text=Ignore
 
-##number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
-##number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
-
 #orig#online_label.connecting=Connecting
 online_label.connecting=Conectando
 #orig#online_label.disabled=Disabled
@@ -1058,10 +1065,10 @@ online_label.online=Online
 ##online_storage.connecting=Connecting to server
 
 ##online_storage_component.online_storage_text=Online storage\: {0}%
+##online_storage_component.online_storage_tip=Open this online storage folder in browser
+##online_storage_component.online_storage_unjoined_text=Online Storage\: 0% (start now)
+##online_storage_component.online_storage_unjoined_tip=Backup this folder to Online Storage
 ##online_storage_component.online_storage_warning=Online storage quota exceeded
-
-#orig#percent.place.holder={0}%
-percent.place.holder={0}%
 
 ##permissions.folder.admin=Admin
 ##permissions.folder.default=default
@@ -1108,6 +1115,7 @@ preferences.dialog.bind.tooltip=Selecione o endere\u00e7o que o PowerFolder deve
 preferences.dialog.bindDescr=Descri\u00e7\u00e3o da Interface
 #orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.create_desktop_shortcuts=Criar atalhos na \u00e1rea de trabalho
+##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=Usar sincroniza\u00e7\u00e3o pela diferen\u00e7a
 #orig#preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
@@ -1274,8 +1282,10 @@ preferences.dialog.titleProcessing=processando...
 preferences.dialog.use.relayed.connections=Usar conex\u00f5es alternadas para melhorar conectividade
 ##preferences.dialog.use.udt.connections=Use UDT connections
 ##preferences.dialog.use_delta_on_internet=on Internet
+##preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
 #orig#preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.use_delta_on_lan=Usar sincroniza\u00e7\u00e3o pela diferen\u00e7a na Rede Local
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
 ##preferences.dialog.use_mass_delete=Use mass delete protection
 #orig#preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.use_pf_icon=Usar icone PowerFolder em Windows
@@ -1506,12 +1516,14 @@ status.download=%.2f KB/s
 status.upload=%.2f KB/s
 
 ##status_bar.no_sleep.tips=Enable folder change scanning
-##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
+##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 ##status_bar.status_change.connected=PowerFolder is connected
 ##status_bar.status_change.disabled=PowerFolder is disabled
 ##status_bar.status_change.title=Connection Status
+
+##sync_icon_button_mini.tip=Synchronize folder now
 
 #orig#synchronization.notice.title=Activated transfer mode {0}
 synchronization.notice.title=Perfil de sincroniza\u00e7\u00e3o em uso {0}
@@ -1633,6 +1645,7 @@ transfers.verifying=Finalizando
 
 ##uploads_information_card.auto_cleanup.days={0} day(s)
 ##uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
+##uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##uploads_information_card.auto_cleanup.immediate=Immediate
 ##uploads_information_card.auto_cleanup.name=Auto-cleanup
 ##uploads_information_card.title=Uploads
@@ -1645,12 +1658,14 @@ user.dir.custom=Personalizado
 user.dir.desktop=\u00c1rea de trabalho
 #orig#user.dir.documents=Documents
 user.dir.documents=Documentos
+##user.dir.downloads=Downloads
 #orig#user.dir.evolution=Evolution
 user.dir.evolution=Evolu\u00e7\u00e3o
 #orig#user.dir.favorites=Favorites
 user.dir.favorites=Favoritos
 #orig#user.dir.links=Links
 user.dir.links=Links
+##user.dir.movies=Movies
 #orig#user.dir.music=Music
 user.dir.music=M\u00fasica
 #orig#user.dir.my_documents=My Documents
@@ -1663,8 +1678,10 @@ user.dir.my_pictures=Minhas Fotos
 user.dir.my_videos=Meus V\u00eddeos
 #orig#user.dir.pictures=Pictures
 user.dir.pictures=Fotos
+##user.dir.public=Public
 #orig#user.dir.recent_documents=Recent Documents
 user.dir.recent_documents=Documentos Recentes
+##user.dir.sites=Sites
 #orig#user.dir.videos=Videos
 user.dir.videos=V\u00eddeos
 
@@ -1731,7 +1748,7 @@ wizard.create_folder.title=Criando pasta PowerFolder
 ##wizard.finish.os_login_title=Login Successful
 ##wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 ##wizard.folder_invitation.title=Folder Invitation
-##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
+##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 ##wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 ##wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
 ##wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
@@ -1758,13 +1775,13 @@ wizard.load_invitation.select_file=Por favor selecione arquivo de convite
 ##wizard.multi_folder_setup.title=Configure Folders
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
-##wizard.multi_online_storage_setup.title=Configure Online Storage Folders
+##wizard.multi_online_storage_setup.title=Configure Online Folders
 ##wizard.pfwizard.title=Folder Wizard
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=Voc\u00ea configurou a pasta do projeto com sucesso\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-##wizard.select_online_storage.info=Please select Online Storage folders to join locally
-##wizard.select_online_storage.title=Select Online Storage folders
+##wizard.select_online_storage.info=Please select online folders to join locally
+##wizard.select_online_storage.title=Select Online Folders
 ##wizard.send_invitations.add_message.text=Attach personalized message
 ##wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 ##wizard.send_invitations.information=What is an invitation?
@@ -1833,6 +1850,7 @@ wizard.what_to_do.invite.select_local=Por favor selecione o diret\u00f3rio local
 #orig#wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.load_invite=Abrir arquivo de convite
 ##wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
+##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 ##wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.open_online_documentation=Abrir documenta\u00e7\u00e3o online
