--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -6,6 +6,10 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Original English texts for existing translations are
+# indicated with a proceeding #orig#.
+# Please check if the meaning is still the same.
+#
 # Pro version translations start with the prefix 'pro.'
 #
 # There is also a guide on our offical webpage under
@@ -396,12 +400,6 @@ chat_panel.member_disconnected_at_time={0} roz\u0142\u0105czony, {1}
 
 ##connection_quality_poor.text=Poor connection quality
 
-##date_format.detailed_time=[HH\:mm\:ss\:SSS]
-##date_format.file_date=MM/dd/yyyy HH\:mm
-##date_format.file_date_hours=HH\:mm
-##date_format.full_date=MM/dd/yyyy HH\:mm\:ss
-##date_format.time_only_date=[HH\:mm\:ss]
-
 ##debug_information_card.title=Debug
 
 ##delete.busy.description=Moving file from your folder to recycle bin
@@ -416,9 +414,9 @@ dialog.already_running.title=Program jest ju\u017c uruchomiony
 #orig#dialog.already_running.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder jest ju\u017c uruchomiony\n\nPodpowied\u017a\: Je\u015bli PowerFolder zosta\u0142 uruchomiony ponownie, \nzamknij wszystkie procesy javaw/java i spr\u00f3buj ponownie
 ##dialog.ask_for_friendship.button.add=Add to friends
-##dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.ask_for_friendship.explain=PowerFolder automatically connects\nto computers on your friendslist.
 ##dialog.ask_for_friendship.message_title=Message from {0}
-##dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.ask_for_friendship.question={0} joined these PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
 ##dialog.ask_for_friendship.title=Add {0} to friend list
 ##dialog.ask_for_quit_on_x.Exit_button=Exit
@@ -513,7 +511,7 @@ dialog.unable_to_open_port=Nie mo\u017cna otworzy\u0107 lokalnego portu {0}, by\
 ##dialog.update.updating.text=Downloading update
 ##dialog.update_check.downloadAndUpdate=Download and update now
 ##dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-##dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+##dialog.update_check.failed.text=Update failed. Please check your Internet connection.
 ##dialog.update_check.failed.title=Update failed
 ##dialog.update_check.gotoHomepage=Go to PowerFolder homepage
 ##dialog.update_check.noUpdateAvailable=This version is up to date
@@ -526,6 +524,7 @@ dialog.unable_to_open_port=Nie mo\u017cna otworzy\u0107 lokalnego portu {0}, by\
 
 ##downloads_information_card.auto_cleanup.days={0} day(s)
 ##downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
+##downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##downloads_information_card.auto_cleanup.immediate=Immediate
 ##downloads_information_card.auto_cleanup.name=Auto-cleanup
 ##downloads_information_card.title=Downloads
@@ -547,7 +546,7 @@ dialog.unable_to_open_port=Nie mo\u017cna otworzy\u0107 lokalnego portu {0}, by\
 ##exp_folder_view.estimated_synchronized=Estimated synchronized\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
-##exp_folder_view.files_available={0} file(s) available
+##exp_folder_view.files_available={0} available
 ##exp_folder_view.files_available_tip=Display the available files
 ##exp_folder_view.folder_local_online_text=Local folder, backed up online
 ##exp_folder_view.folder_local_text=Local folder
@@ -557,6 +556,7 @@ dialog.unable_to_open_port=Nie mo\u017cna otworzy\u0107 lokalnego portu {0}, by\
 ##exp_folder_view.local={0} local
 ##exp_folder_view.members=Members\: {0} ({1} connected)
 ##exp_folder_view.never_synchronized=Never synchronized
+##exp_folder_view.new_files_tip_text={0} new file(s)
 ##exp_folder_view.not_yet_scanned=Not yet scanned
 ##exp_folder_view.synchronized={0}% synchronized
 ##exp_folder_view.total={0} total
@@ -595,7 +595,10 @@ file_info.name=Nazwa
 #orig#file_info.remote_deleted=Newer version deleted by other computer
 file_info.remote_deleted=Nowsza wersja usuni\u0119ta przez innego u\u017cytkownika
 
+##file_version_tab.current_version=Current version\: {0}
+##file_version_tab.date=Date\: {0}
 ##file_version_tab.no_versions_available=No version history available
+##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
 ##file_versions_table_model.size=Size
@@ -772,8 +775,12 @@ friends_panel.n_a=niedost\u0119pny
 #orig#friends_panel.unable_to_connect=Currently online (Unable to connect)
 friends_panel.unable_to_connect=Nie mo\u017cna po\u0142\u0105czy\u0107
 
+##friendship.notification.message=You have received a request for friendship.
+##friendship.notification.title=Friendship Request Received
+
 ##general.accept=Accept
 ##general.application.name=PowerFolder
+##general.apply=Apply
 ##general.archive_mode=File archive (local)
 #orig#general.cancel=Cancel
 general.cancel=Anuluj
@@ -805,7 +812,6 @@ general.friday=Pi\u0105tek
 #orig#general.hours=Hour(s)
 general.hours=Godzina
 ##general.inviter=Inviter
-##general.lan_only=LAN only
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=Lokalna kopia w
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -818,6 +824,9 @@ general.minutes=Minuta
 #orig#general.monday=Monday
 general.monday=Poniedzia\u0142ek
 ##general.more.lower_case=more
+##general.network_mode.lan_only=LAN only
+##general.network_mode.private=LAN and Internet
+##general.network_mode.server_only=Server only
 ##general.neverAskAgain=Never ask this again
 #orig#general.not_available=not available
 general.not_available=niedost\u0119pny
@@ -839,7 +848,6 @@ general.saturday=Sobota
 #orig#general.seconds=Second(s)
 general.seconds=Sekundy
 ##general.server=Server
-##general.server_only=Server only
 #orig#general.size=Size
 general.size=Rozmiar
 #orig#general.sunday=Sunday
@@ -865,10 +873,10 @@ general.yesterday=wczoraj
 
 ##home_tab.computers=Computer(s)
 ##home_tab.files_available=File(s) available
-##home_tab.files_downloaded=File(s) downloaded
-##home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
-##home_tab.files_uploaded=File(s) uploaded
-##home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
+##home_tab.files_downloads=Download(s)
+##home_tab.files_downloads_active=Download(s) ({0} KB/s)
+##home_tab.files_uploads=Upload(s)
+##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
 ##home_tab.folders=Folder(s)
 ##home_tab.in_sync=All folders are synchronized
 ##home_tab.last_synced=Last synchronized {0}
@@ -908,6 +916,8 @@ image_file_info.resolution=Rozdzielczo\u015b\u0107
 #orig#image_file_info.unknown=Unknown
 image_file_info.unknown=Nieznane
 
+##invitation.notification.message=You have received an invitation to a folder.
+##invitation.notification.title=Invitation Received
 ##invitation.utils.unable.write.text=Error while writing invitation, please try again.
 ##invitation.utils.unable.write.title=Unable to write invitation
 
@@ -956,7 +966,7 @@ low_memory.configure_failure=PowerFolder nie by\u0142 w stanie skonfigurowa\u010
 low_memory.configure_success=Dodatkowa pami\u0119\u0107 zosta\u0142a poprawnie skonfigurowana.\nPowerFolder musi zosta\u0107 r\u0119cznie uruchomiony ponownie, aby zmiany odnios\u0142y skutek.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=Nic nie r\u00f3b
-##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Zwi\u0119ksz Pami\u0119\u0107
@@ -1028,9 +1038,6 @@ network_statistics_panel.reconnection_queue_size=W\u0119z\u0142y w kolejce do po
 ##notification_handler.display.text=Display
 ##notification_handler.ignore.text=Ignore
 
-##number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
-##number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
-
 #orig#online_label.connecting=Connecting
 online_label.connecting=\u0141\u0105czenie
 #orig#online_label.disabled=Disabled
@@ -1042,10 +1049,10 @@ online_label.online=Po\u0142\u0105czony
 ##online_storage.connecting=Connecting to server
 
 ##online_storage_component.online_storage_text=Online storage\: {0}%
+##online_storage_component.online_storage_tip=Open this online storage folder in browser
+##online_storage_component.online_storage_unjoined_text=Online Storage\: 0% (start now)
+##online_storage_component.online_storage_unjoined_tip=Backup this folder to Online Storage
 ##online_storage_component.online_storage_warning=Online storage quota exceeded
-
-#orig#percent.place.holder={0}%
-percent.place.holder={0}%
 
 ##permissions.folder.admin=Admin
 ##permissions.folder.default=default
@@ -1092,6 +1099,7 @@ preferences.dialog.bind.tooltip=Wybierz adres, kt\u00f3rego PowerFolder powinien
 preferences.dialog.bindDescr=Opis interfejsu
 #orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.create_desktop_shortcuts=Stw\u00f3rz skr\u00f3t na pulpicie
+##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=U\u017cywaj synchronizacji delta
 #orig#preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
@@ -1255,7 +1263,9 @@ preferences.dialog.titleProcessing=przetwarzanie...
 ##preferences.dialog.use.relayed.connections=Use relayed connections
 ##preferences.dialog.use.udt.connections=Use UDT connections
 ##preferences.dialog.use_delta_on_internet=on Internet
+##preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
 ##preferences.dialog.use_delta_on_lan=on LAN
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
 ##preferences.dialog.use_mass_delete=Use mass delete protection
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 ##preferences.dialog.use_zip_on_internet=on Internet
@@ -1483,12 +1493,14 @@ status.download=%.2f KB/s
 status.upload=%.2f KB/s
 
 ##status_bar.no_sleep.tips=Enable folder change scanning
-##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
+##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 ##status_bar.status_change.connected=PowerFolder is connected
 ##status_bar.status_change.disabled=PowerFolder is disabled
 ##status_bar.status_change.title=Connection Status
+
+##sync_icon_button_mini.tip=Synchronize folder now
 
 #orig#synchronization.notice.title=Activated transfer mode {0}
 synchronization.notice.title=Profil synchronizacji {0} zosta\u0142 aktywowany
@@ -1610,6 +1622,7 @@ transfers.verifying=Ko\u0144czenie
 
 ##uploads_information_card.auto_cleanup.days={0} day(s)
 ##uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
+##uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 ##uploads_information_card.auto_cleanup.immediate=Immediate
 ##uploads_information_card.auto_cleanup.name=Auto-cleanup
 ##uploads_information_card.title=Uploads
@@ -1622,12 +1635,14 @@ user.dir.custom=W\u0142asne
 user.dir.desktop=Pulpit
 #orig#user.dir.documents=Documents
 user.dir.documents=Dokumenty
+##user.dir.downloads=Downloads
 #orig#user.dir.evolution=Evolution
 user.dir.evolution=Evolution
 #orig#user.dir.favorites=Favorites
 user.dir.favorites=Ulubione
 #orig#user.dir.links=Links
 user.dir.links=Linki
+##user.dir.movies=Movies
 #orig#user.dir.music=Music
 user.dir.music=Muzyka
 #orig#user.dir.my_documents=My Documents
@@ -1640,8 +1655,10 @@ user.dir.my_pictures=Moje Obrazy
 user.dir.my_videos=Moje Video
 #orig#user.dir.pictures=Pictures
 user.dir.pictures=Obrazy
+##user.dir.public=Public
 #orig#user.dir.recent_documents=Recent Documents
 user.dir.recent_documents=Ostatnie Dokumenty
+##user.dir.sites=Sites
 #orig#user.dir.videos=Videos
 user.dir.videos=Video
 
@@ -1708,7 +1725,7 @@ wizard.control.next.description=Przejd\u017a do nast\u0119pnego kroku kreatora
 ##wizard.finish.os_login_title=Login Successful
 ##wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 ##wizard.folder_invitation.title=Folder Invitation
-##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
+##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 ##wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 ##wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
 ##wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
@@ -1735,12 +1752,12 @@ wizard.load_invitation.select_file=Prosz\u0119 wybra\u0107 plik zaproszenia
 ##wizard.multi_folder_setup.title=Configure Folders
 ##wizard.multi_online_storage_setup.local_folder_location=Local folder location
 ##wizard.multi_online_storage_setup.select_directory=Select directory
-##wizard.multi_online_storage_setup.title=Configure Online Storage Folders
+##wizard.multi_online_storage_setup.title=Configure Online Folders
 ##wizard.pfwizard.title=Folder Wizard
 ##wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 ##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-##wizard.select_online_storage.info=Please select Online Storage folders to join locally
-##wizard.select_online_storage.title=Select Online Storage folders
+##wizard.select_online_storage.info=Please select online folders to join locally
+##wizard.select_online_storage.title=Select Online Folders
 ##wizard.send_invitations.add_message.text=Attach personalized message
 ##wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 ##wizard.send_invitations.information=What is an invitation?
@@ -1798,6 +1815,7 @@ wizard.webservice.username=Email
 ##wizard.what_to_do.join_online.tip=Sync files from previously setup computers with this computer
 ##wizard.what_to_do.load_invite=Open invitation file
 ##wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
+##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 ##wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.open_online_documentation=Otw\u00f3rz Dokumentacj\u0119 Online
